# cbsodata4

./: pyproject.toml
cbsodata4/: __init__.py  catalogs.py  config.py  data.py  datasets.py  date_handling.py  download.py  labeler.py  labeling.py  metadata.py  observations.py  query.py  search.py  unit_handling.py  utils.py
src/cbsodata4/: __init__.py  dataset_search.py  downloader.py  metadata.py
tests/: test_data_processor.py  test_dataset_search.py  test_datasets.py  test_date_handler.py  test_downloader.py  test_httpx_client.py  test_labeler.py  test_metadata.py  test_observations.py  test_unit_handler.py
